--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "PEP440 implementation in JavaScript",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint lib test",
     "test": "jest"
   },
   "repository": {
@@ -23,6 +24,9 @@
     "eslint": "4.19.1",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-promise": "3.8.0",
     "jest": "23.1.0"
   },
   "jest": {
