--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "PEP440 implementation in JavaScript",
   "main": "index.js",
   "scripts": {
+    "prettier": "prettier \"**/*.{js,json,md}\" --write",
     "codecov": "codecov",
     "lint": "eslint lib test index.js",
-    "jest": "jest"
+    "jest": "jest",
+    "test": "npm run prettier --list-different && npm run lint && npm run jest"
   },
   "repository": {
     "type": "git",
