--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
     - "node_modules"
 
 script:
+  - npm run prettier --list-different
   - npm run lint
   - npm run jest --maxWorkers=4
 
