--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "PEP440 implementation in JavaScript",
   "main": "index.js",
   "scripts": {
+    "prettier": "prettier \"**/*.{js,json,md}\" --write",
     "codecov": "codecov",
     "lint": "eslint lib test index.js",
-    "jest": "jest"
+    "jest": "jest",
+    "test": "npm run prettier --list-different && npm run lint && npm run jest"
   },
   "repository": {
     "type": "git",
@@ -29,7 +31,8 @@
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-promise": "3.8.0",
-    "jest": "23.4.1"
+    "jest": "23.4.1",
+    "prettier": "1.14.0"
   },
   "jest": {
     "coverageDirectory": "./coverage",
