--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["config:base", "group:linters"]
+  "extends": ["config:base", "group:linters"],
+  "rangeStrategy": "lockfile-update"
 }
