--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["config:base", "group:linters", ":automergeMinor"],
+  "extends": ["config:base", "group:linters", ":automergeMinor", ":automergeBranch"],
   "rangeStrategy": "lockfile-update"
 }
