--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "extends": ["config:base", "group:linters", ":automergeMinor"],
   "automergeType": "branch",
+  "requiredStatusChecks": null,
   "rangeStrategy": "lockfile-update"
 }
