--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "PEP440 implementation in JavaScript",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier \"**/*.{js,json,md}\" --write",
     "codecov": "codecov",
-    "lint": "eslint lib test index.js",
+    "eslint": "eslint lib test index.js",
+    "eslint-fix": "eslint lib test index.js --fix",
     "jest": "jest --env=node",
-    "test": "npm run prettier --list-different && npm run lint && npm run jest"
+    "prettier": "prettier --check \"**/*.{ts,js,mjs,json,md}\"",
+    "prettier-fix": "prettier --write \"**/*.{ts,js,mjs,json,md}\"",
+    "test": "run-s prettier eslint jest"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-promise": "4.3.1",
     "jest": "26.6.3",
+    "npm-run-all": "4.1.5",
     "prettier": "2.2.1"
   },
   "jest": {
