--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/renovatebot/pep440#readme",
   "devDependencies": {
     "codecov": "3.8.2",
+    "conventional-changelog-conventionalcommits": "4.6.3",
     "eslint": "8.6.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.3.0",
@@ -35,7 +36,8 @@
     "eslint-plugin-promise": "6.0.0",
     "jest": "27.4.5",
     "npm-run-all": "4.1.5",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "semantic-release": "18.0.1"
   },
   "jest": {
     "coverageDirectory": "./coverage",
