--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@renovate/pep440",
+  "name": "@renovatebot/pep440",
   "version": "1.0.0",
   "description": "PEP440 implementation in JavaScript",
   "main": "index.js",
