chore: don't add released comments

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,6 +6,7 @@
       "@semantic-release/github",
       {
         "releasedLabels": false
+        "successComment": false,
       }
     ],
     "@semantic-release/npm"
