--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,8 +5,8 @@
     [
       "@semantic-release/github",
       {
-        "releasedLabels": false
-        "successComment": false,
+        "releasedLabels": false,
+        "successComment": false
       }
     ],
     "@semantic-release/npm"
