--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,7 +5,8 @@
     [
       "@semantic-release/github",
       {
-        "releasedLabels": false
+        "releasedLabels": false,
+        "successComment": false
       }
     ],
     "@semantic-release/npm"
