--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "url": "https://github.com/renovatebot/pep440/issues"
   },
   "homepage": "https://github.com/renovatebot/pep440#readme",
+  "engines": {
+    "node": "^14.15.0 || >=16.13.0",
+    "yarn": "^1.17.0"
+  },
   "devDependencies": {
     "codecov": "3.8.2",
     "conventional-changelog-conventionalcommits": "4.6.3",
