--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
-    "husky": "^7.0.0",
+    "husky": "7.0.4",
     "jest": "27.4.7",
     "npm-run-all": "4.1.5",
     "prettier": "2.5.1",
+    "pretty-quick": "3.1.3"
     "semantic-release": "18.0.1"
   },
   "jest": {
@@ -61,8 +62,5 @@
     "index.js",
     "lib",
     "index.d.ts"
-  ],
-  "dependencies": {
-    "pretty-quick": "3.1.3"
-  }
+  ]
 }
