--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jest": "27.4.7",
     "npm-run-all": "4.1.5",
     "prettier": "2.5.1",
-    "pretty-quick": "3.1.3"
+    "pretty-quick": "3.1.3",
     "semantic-release": "18.0.1"
   },
   "jest": {
