--- a/package.json
+++ b/package.json
@@ -2,65 +2,58 @@
   "name": "@renovatebot/pep440",
   "version": "0.0.0-semantic-release",
   "description": "PEP440 implementation in JavaScript",
-  "main": "index.js",
-  "scripts": {
-    "codecov": "codecov",
-    "eslint": "eslint lib test index.js",
-    "eslint-fix": "eslint lib test index.js --fix",
-    "jest": "jest --env=node",
-    "prettier": "prettier --check \"**/*.{ts,js,mjs,json,md}\"",
-    "prettier-fix": "prettier --write \"**/*.{ts,js,mjs,json,md}\"",
-    "test": "run-s prettier eslint jest",
-    "prepare": "husky install"
-  },
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/renovatebot/pep440.git"
+    "url": "https://github.com/renovatebot/pep440.git"
   },
-  "keywords": [
-    "pep440"
-  ],
   "author": "Ayoub Kaanich",
-  "license": "Apache-2.0",
+  "homepage": "https://github.com/renovatebot/pep440#readme",
   "bugs": {
     "url": "https://github.com/renovatebot/pep440/issues"
   },
-  "homepage": "https://github.com/renovatebot/pep440#readme",
+  "main": "index.js",
   "engines": {
     "node": "^14.15.0 || >=16.13.0",
     "yarn": "^1.17.0"
   },
+  "scripts": {
+    "eslint": "eslint .",
+    "eslint-fix": "eslint . --fix",
+    "jest": "jest",
+    "lint": "run-s eslint markdown-lint prettier",
+    "lint-fix": "run-s eslint-fix markdown-lint-fix prettier-fix",
+    "markdown-lint": "markdownlint-cli2",
+    "markdown-lint-fix": "markdownlint-cli2-fix",
+    "prepare": "husky install",
+    "prettier": "prettier --ignore-unknown --check \"**/*.*\"",
+    "prettier-fix": "prettier --ignore-unknown --write \"**/*.*\"",
+    "test": "run-s prettier eslint markdown-lint jest"
+  },
+  "files": [
+    "index.d.ts",
+    "index.js",
+    "lib"
+  ],
+  "keywords": [
+    "pep440"
+  ],
   "devDependencies": {
-    "codecov": "3.8.2",
     "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.32.0",
-    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.6.0",
+    "eslint-formatter-gha": "1.4.1",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-promise": "6.1.1",
     "husky": "8.0.3",
     "jest": "29.3.1",
+    "lint-staged": "13.1.0",
+    "markdownlint-cli2": "0.6.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.3",
-    "pretty-quick": "3.1.3",
+    "prettier-plugin-package": "1.3.0",
     "semantic-release": "19.0.5"
   },
-  "jest": {
-    "coverageDirectory": "./coverage",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "lib/**/*.js"
-    ],
-    "coverageReporters": [
-      "json",
-      "html",
-      "text-summary"
-    ]
-  },
-  "files": [
-    "index.js",
-    "lib",
-    "index.d.ts"
-  ]
+  "packageManager": "yarn@1.22.19"
 }
