--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,11 +48,14 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Set up Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
+          cache: pnpm
 
       - name: Init platform
         shell: bash
@@ -60,13 +63,13 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.symlinks true
           echo 'Node $(node --version)'
-          echo 'Yarn $(yarn --version)'
+          echo 'pnpm $(pnpm --version)'
 
       - name: Installing dependencies
-        run: yarn install --frozen-lockfile --ignore-engines # semantic release will fail to install otherwise
+        run: pnpm install
 
       - name: Run tests
-        run: yarn jest --maxWorkers=2 --ci --coverage ${{ env.coverage }} --logHeapUsage
+        run: pnpm jest --maxWorkers=2 --ci --coverage ${{ env.coverage }} --logHeapUsage
 
       - name: Codecov
         uses: codecov/codecov-action@eaaf4bedf32dbdc6b720b63067d99c4d77d6047d # v3.1.4
@@ -83,30 +86,33 @@ jobs:
         with:
           fetch-depth: 2
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Set up Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
+          cache: pnpm
 
       - name: Init platform
         run: |
           git config --global core.autocrlf false
           git config --global core.symlinks true
           echo 'Node $(node --version)'
-          echo 'Yarn $(yarn --version)'
+          echo 'pnpm $(pnpm --version)'
 
       - name: Installing dependencies
-        run: yarn install --frozen-lockfile
+        run: pnpm install
 
       - name: Lint
         run: |
-          yarn eslint -f gha
-          yarn markdown-lint
-          yarn prettier
+          pnpm eslint -f gha
+          pnpm markdown-lint
+          pnpm prettier
 
       # - name: Type check
-      #   run: yarn type-check
+      #   run: pnpm type-check
 
   release:
     needs: [lint, test]
@@ -121,11 +127,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Set up Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
+          cache: pnpm
 
       - name: Init platform
         run: |
@@ -133,7 +142,6 @@ jobs:
           git config --global core.symlinks true
           git config --global user.email ${GIT_EMAIL}
           git config --global user.name  'Renovate Bot'
-          yarn config set version-git-tag false
 
       - name: Check dry run
         run: |
@@ -146,11 +154,11 @@ jobs:
           fi
 
       - name: Installing dependencies
-        run: yarn install --frozen-lockfile
+        run: pnpm install
 
       - name: semantic-release
         run: |
-          yarn semantic-release --dry-run ${{env.DRY_RUN}}
+          pnpm semantic-release --dry-run ${{env.DRY_RUN}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
