--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [14, 16, 18]
+        node-version: [18, 20]
         # exclude:
         #   - os: windows-latest
         #     node-version: 12
