--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "index.js",
   "engines": {
     "node": "^18.12.0 || >= 20.0.0",
-    "yarn": "^1.17.0"
+    "pnpm": "^8.6.11"
   },
   "scripts": {
     "eslint": "eslint .",
@@ -55,5 +55,5 @@
     "prettier-plugin-package": "1.3.1",
     "semantic-release": "21.0.7"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "pnpm@8.6.11"
 }
