fix: prettier config update

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
   workflow_dispatch:
     inputs:
       dryRun:
-        description: "Dry-Run"
-        default: "true"
+        description: 'Dry-Run'
+        default: 'true'
         required: false
 
 concurrency:
