--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -18,7 +18,7 @@
   },
 
   // Define glob expressions to use (only valid at root)
-  "globs": ["**/*.md"],
+  // "globs": ["**/*.md"],
 
   // Define glob expressions to ignore
   "ignores": [
