--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "jest": "jest",
     "lint": "run-s eslint markdown-lint prettier",
     "lint-fix": "run-s eslint-fix markdown-lint-fix prettier-fix",
-    "markdown-lint": "markdownlint-cli2",
-    "markdown-lint-fix": "markdownlint-cli2-fix",
-    "prepare": "husky install",
+    "markdown-lint": "markdownlint-cli2 '**/*.md'",
+    "markdown-lint-fix": "markdownlint-cli2 --fix '**/*.md'",
+    "prepare": "husky",
     "prettier": "prettier --ignore-unknown --check '**/*.*'",
     "prettier-fix": "prettier --ignore-unknown --write '**/*.*'",
     "test": "run-s prettier eslint markdown-lint jest"
