chore(renovate): drop rules

--- a/renovate.json
+++ b/renovate.json
@@ -1,15 +1,5 @@
 {
   "extends": ["github>renovatebot/.github"],
   "automergeType": "pr",
-  "prCreation": "immediate",
-  "packageRules": [
-    {
-      "matchDepTypes": ["dependencies"],
-      "semanticCommitType": "build"
-    },
-    {
-      "matchPackageNames": ["semantic-release"],
-      "semanticCommitType": "build"
-    }
-  ]
+  "prCreation": "immediate"
 }
