--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,13 @@ jobs:
       - name: Run tests
         run: pnpm jest --maxWorkers=2 --ci --coverage ${{ env.coverage }} --logHeapUsage
 
+      - name: Upload coverage
+        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
+        if: always() && env.coverage == 'true'
+        with:
+          name: coverage
+          path: coverage
+
       - name: Codecov
         uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 # v4.0.1
         with:
