--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ env:
   NODE_VERSION: 20 # needs to be in sync with other versions below
   DRY_RUN: true
 
+permissions:
+  contents: read
+
 jobs:
   test:
     name: ${{ matrix.node-version == 20 && format('test ({0})', matrix.os) || format('test ({0}, node-{1})', matrix.os, matrix.node-version) }}
@@ -133,6 +136,10 @@ jobs:
 
     # tests shouldn't need more time
     timeout-minutes: 15
+
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       # full checkout for semantic-release
