--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "packageManager": "pnpm@8.15.9",
   "engines": {
-    "node": "^18.12.0 || ^20.0.0 || ^22.11.0",
+    "node": "^20.0.0 || ^22.11.0",
     "pnpm": "^8.6.11"
   }
 }
