--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
-    "node": "^18.12.0 || ^20.0.0 || ^22.11.0",
+    "node": "^20.0.0 || ^22.11.0",
     "pnpm": "^9.0.0"
   }
 }
