--- a/package.json
+++ b/package.json
@@ -35,13 +35,20 @@
     "test": "run-s prettier eslint markdown-lint jest"
   },
   "devDependencies": {
+    "@containerbase/eslint-plugin": "1.1.0",
+    "@eslint/js": "9.14.0",
+    "@types/eslint-config-prettier": "6.11.3",
+    "@types/jest": "29.5.14",
+    "@types/node": "20.17.5",
     "conventional-changelog-conventionalcommits": "8.0.0",
     "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-formatter-gha": "1.5.1",
+    "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-promise": "7.1.0",
+    "globals": "15.12.0",
     "husky": "9.1.6",
     "jest": "29.7.0",
     "lint-staged": "15.2.10",
@@ -49,7 +56,8 @@
     "npm-run-all2": "7.0.1",
     "prettier": "3.3.3",
     "prettier-plugin-packagejson": "2.5.3",
-    "semantic-release": "24.2.0"
+    "semantic-release": "24.2.0",
+    "typescript-eslint": "8.14.0"
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
