chore: get ready for node 24

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "packageManager": "pnpm@10.14.0",
   "engines": {
-    "node": "^20.9.0 || ^22.11.0",
+    "node": "^20.9.0 || ^22.11.0 || ^24",
     "pnpm": "^10.0.0"
   }
 }
