--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,10 +50,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [20, 22]
-        # exclude:
-        #   - os: windows-latest
-        #     node-version: 12
+        node-version: [20, 22, 24]
 
     env:
       coverage: ${{ matrix.os == 'ubuntu-latest' && matrix.node-version == 22 }}
