build: use oidc for publish

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: build
 on:
   pull_request:
   push:
-    branches:
-      - main
+    branches-ignore:
+      - gh-readonly-queue/**
 
   workflow_dispatch:
     inputs:
@@ -12,45 +12,48 @@ on:
         description: 'Dry-Run'
         default: 'true'
         required: false
+  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
-  cancel-in-progress: ${{ github.ref_name != 'main' }}
+  cancel-in-progress: ${{ github.ref_name != 'main' && !startsWith(github.ref_name, 'maint/') && github.event_name == 'push' }}
 
 env:
-  DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
-  DRY_RUN: true
+  DRY_RUN: ${{ github.ref_name != github.event.repository.default_branch && !startsWith(github.ref_name, 'maint/') }}
 
 permissions:
   contents: read
 
 jobs:
-  prepare:
+  setup:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
-        with:
-          show-progress: false
-
-      - name: 📥 Setup Node.js
-        uses: ./.github/actions/setup-node
+      - name: ⚙️ Setup
+        uses: containerbase/internal-tools/setup@a9ff2c0e8c85e7f94db97cbe6039424da5af8445 # v3.13.1
         with:
           save-cache: true
+
   test:
     needs:
-      - prepare
+      - setup
     name: ${{ matrix.node-version == 22 && format('test ({0})', matrix.os) || format('test ({0}, node-{1})', matrix.os, matrix.node-version) }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
 
     # tests shouldn't need more time
     timeout-minutes: 30
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [20, 22, 24]
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+        node-version:
+          - 20
+          - 22
+          - 24
 
     env:
       coverage: ${{ matrix.os == 'ubuntu-latest' && matrix.node-version == 22 }}
@@ -62,9 +65,10 @@ jobs:
           show-progress: false
           filter: blob:none # we don't need all blobs
 
-      - name: 📥 Setup Node.js
-        uses: ./.github/actions/setup-node
+      - name: ⚙️ Setup
+        uses: containerbase/internal-tools/setup@a9ff2c0e8c85e7f94db97cbe6039424da5af8445 # v3.13.1
         with:
+          checkout: false
           node-version: ${{ matrix.node-version }}
           save-cache: true
 
@@ -94,29 +98,15 @@ jobs:
 
   lint:
     needs:
-      - prepare
+      - setup
     runs-on: ubuntu-latest
 
     # lint shouldn't need more than 10 min
     timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
-        with:
-          show-progress: false
-
-      - name: 📥 Setup Node.js
-        uses: ./.github/actions/setup-node
-
-      - name: Init platform
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.symlinks true
-          echo 'Node $(node --version)'
-          echo 'pnpm $(pnpm --version)'
-
-      - name: Installing dependencies
-        run: pnpm install
+      - name: ⚙️ Setup
+        uses: containerbase/internal-tools/setup@a9ff2c0e8c85e7f94db97cbe6039424da5af8445 # v3.13.1
 
       - name: Lint
         run: |
@@ -139,6 +129,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
+      issues: write
 
     steps:
       # full checkout for semantic-release
@@ -148,33 +139,50 @@ jobs:
           show-progress: false
           filter: blob:none # we don't need all blobs
 
-      - name: 📥 Setup Node.js
-        uses: ./.github/actions/setup-node
-
-      - name: Init platform
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.symlinks true
-          # Use github action user for the commit
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-      - name: Check dry run
-        run: |
-          if [[ '${{github.event_name}}' == 'workflow_dispatch' && '${{ github.event.inputs.dryRun }}' != 'true'  ]]; then
-            echo 'DRY_RUN=false' >> $GITHUB_ENV
-          elif [[ '${{github.ref}}' == 'refs/heads/${{env.DEFAULT_BRANCH}}' ]]; then
-            echo 'DRY_RUN=false' >> $GITHUB_ENV
-          elif [[ '${{github.ref}}' =~ ^refs/heads/v[0-9]+(\.[0-9]+)?$ ]]; then
-            echo 'DRY_RUN=false' >> $GITHUB_ENV
-          fi
-
-      - name: Installing dependencies
-        run: pnpm install
+      - name: ⚙️ Setup
+        uses: containerbase/internal-tools/setup@a9ff2c0e8c85e7f94db97cbe6039424da5af8445 # v3.13.1
+        with:
+          checkout: false
 
       - name: semantic-release
         run: |
-          pnpm semantic-release --dry-run ${{env.DRY_RUN}}
+          pnpm semantic-release --dry-run ${{env.DRY_RUN}} --ci ${{env.DRY_RUN != 'true'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  # Catch-all required check
+  success:
+    needs:
+      - setup
+      - lint
+      - test
+      - release
+    runs-on: ubuntu-latest
+
+    timeout-minutes: 1
+
+    if: always()
+    steps:
+      - name: Fail for failed or skipped setup job
+        if: |
+          needs.setup.result == 'failure' ||
+          needs.setup.result == 'skipped'
+        run: exit 1
+
+      - name: Fail for failed or skipped lint job
+        if: |
+          needs.lint.result == 'failure' ||
+          needs.lint.result == 'skipped'
+        run: exit 1
+
+      - name: Fail for failed or skipped lint job
+        if: |
+          needs.test.result == 'failure' ||
+          needs.test.result == 'skipped'
+        run: exit 1
+
+      - name: Fail for failed or skipped release job
+        if: |
+          needs.release.result == 'failure' ||
+          needs.release.result == 'skipped'
+        run: exit 1
