--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@containerbase/eslint-plugin": "1.1.6",
+    "@containerbase/semantic-release-pnpm": "1.2.1",
     "@eslint/js": "9.35.0",
     "@types/eslint-config-prettier": "6.11.3",
     "@types/jest": "29.5.14",
