--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,9 @@ jobs:
     # tests shouldn't need more time
     timeout-minutes: 30
 
+    permissions:
+      id-token: write
+
     strategy:
       matrix:
         os:
@@ -90,11 +93,17 @@ jobs:
           name: coverage
           path: coverage
 
-      - name: Codecov
+      - name: Codecov Coverage Result
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-        if: env.coverage == 'true'
+          use_oidc: true
+        if: env.coverage == 'true' && github.event_name != 'merge_group'
+
+      - name: Codecov Test Results
+        if: github.event_name != 'merge_group'
+        uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
+        with:
+          use_oidc: true
 
   lint:
     needs:
