--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "globals": "16.4.0",
     "husky": "9.1.7",
     "jest": "30.2.0",
+    "jest-junit": "16.0.0",
     "lint-staged": "16.2.6",
     "markdownlint-cli2": "0.18.1",
     "npm-run-all2": "8.0.4",
