ci: always upload test results

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
         if: env.coverage == 'true' && github.event_name != 'merge_group'
 
       - name: Codecov Test Results
-        if: github.event_name != 'merge_group'
+        if: always() && github.event_name != 'merge_group'
         uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
         with:
           use_oidc: true
