--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,23 +87,25 @@ jobs:
         run: pnpm jest --maxWorkers=2 --ci --coverage ${{ env.coverage }} --logHeapUsage
 
       - name: Upload coverage
+        if: env.coverage == 'true' && github.event_name != 'merge_group' && !cancelled()
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
-        if: always() && env.coverage == 'true'
         with:
           name: coverage
           path: coverage
 
-      - name: Codecov Coverage Result
+      - name: Codecov coverage result
+        if: env.coverage == 'true' && github.event_name != 'merge_group'
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
           use_oidc: true
-        if: env.coverage == 'true' && github.event_name != 'merge_group'
 
-      - name: Codecov Test Results
-        if: always() && github.event_name != 'merge_group'
+      - name: Codecov test results
+        if: github.event_name != 'merge_group' && !cancelled()
         uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
         with:
           use_oidc: true
+          flags: node${{ matrix.node-version }}
+          name: ${{ matrix.os }}-test-results
 
   lint:
     needs:
