ci: flag codecov results

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,14 +98,14 @@ jobs:
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
           use_oidc: true
+          flags: node${{ matrix.node-version }}, ${{ runner.os }}
 
       - name: Codecov test results
         if: github.event_name != 'merge_group' && !cancelled()
         uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
         with:
           use_oidc: true
-          flags: node${{ matrix.node-version }}
-          name: ${{ matrix.os }}-test-results
+          flags: node${{ matrix.node-version }}, ${{ runner.os }}
 
   lint:
     needs:
