--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,16 +93,17 @@ jobs:
           name: coverage
           path: coverage
 
-      - name: Codecov coverage result
-        if: env.coverage == 'true' && github.event_name != 'merge_group'
+      - name: Codecov test results
+        if: github.event_name != 'merge_group' && !cancelled()
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
           use_oidc: true
+          report_type: test_results
           flags: node${{ matrix.node-version }}-${{ runner.os }}
 
-      - name: Codecov test results
-        if: github.event_name != 'merge_group' && !cancelled()
-        uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
+      - name: Codecov coverage result
+        if: env.coverage == 'true' && github.event_name != 'merge_group'
+        uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
           use_oidc: true
           flags: node${{ matrix.node-version }}-${{ runner.os }}
